--- a/launch/melex_autoware_demos/package.xml
+++ b/launch/melex_autoware_demos/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>melex_autoware_auto_avp_demo</name>
+  <name>melex_autoware_demos</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="amadeusz.szymko@put.poznan.pl">Amadeusz Szymko</maintainer>
