--- a/drivers/melex_ros2_ouster/params/os1.yaml
+++ b/drivers/melex_ros2_ouster/params/os1.yaml
@@ -1,7 +1,7 @@
 ouster_driver:
   ros__parameters:
-    lidar_ip: 192.168.2.3
-    computer_ip: 192.168.2.1
+    lidar_ip: 172.16.8.55
+    computer_ip: 172.16.8.201
     lidar_mode: "512x10"
     imu_port: 7503
     lidar_port: 7502
@@ -12,7 +12,7 @@ ouster_driver:
     # if False, data are published with sensor data QoS. This is preferrable
     # for production but default QoS is needed for rosbag.
     # See: https://github.com/ros2/rosbag2/issues/125
-    use_system_default_qos: False
+    use_system_default_qos: True
 
     # Set the method used to timestamp measurements.
     # Valid modes are:
